fixed selling points display on mobile

--- a/template00-bootstrap/style.css
+++ b/template00-bootstrap/style.css
@@ -157,11 +157,10 @@ header a:hover {
     align-items: center;
 }
 
-.benText {
+.benefits section .benText {
     display: flex;
     flex-direction: column;
     max-width: 80%;
-    background-color: red;
 }
 
 .subscribe {
